# tocks

./: .gitmodules  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
design/: notification_design.md
docker/: Dockerfile
openal-sys/: Cargo.toml  build.rs
openal-sys/src/: lib.rs
tocks/: Cargo.toml
tocks/src/: account.rs  audio.rs  calls.rs  chatroom.rs  contact.rs  error.rs  lib.rs  message_parser.rs  savemanager.rs  storage.rs
tocks/src/event_server/: mod.rs  tcp.rs  unix.rs
toxcore/: Cargo.toml
toxcore-sys/: Cargo.toml  build.rs
toxcore-sys/src/: lib.rs
toxcore/examples/: echobot.rs
toxcore/src/: av.rs  builder.rs  encryption.rs  error.rs  friend.rs  lib.rs  sys.rs  tox.rs
ui/: Cargo.toml  build.rs
ui/qml/: AccountPage.qml  ChatHeader.qml  ChatLog.qml  ChatRoom.qml  Colors.js  FriendsList.qml  GlobalSettingsPage.qml  Login.qml  MainWindow.qml  NotificationManager.qml  Sidebar.qml  SidebarAccount.qml  SidebarConstants.js  StatusIcon.qml  Tocks.qml  TocksButton.qml  TocksComboBox.qml  TocksSpacer.qml
ui/qml/res/: attribution.txt
ui/src/: account.rs  chat_model.rs  contacts.rs  lib.rs
