[package]
name = "app"
version = "0.1.0"
authors = ["Mick Sayson <mick@sayson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
pretty_env_logger = "0.4.0"
tocks = { path = "../tocks" }
tokio = { version = "1.6.1", features = ["rt", "macros"] }
ui = { path = "../ui" }

[[bin]]
name = "tocks"
path = "src/main.rs"
