[package]
name = "app"
version = "0.1.0"
authors = ["Mick Sayson <mick@sayson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
structopt = "0.3.21"
log = "0.4.14"
env_logger = "0.8.4"
tocks = { path = "../tocks" }
toxcore = { path = "../toxcore" }
tokio = { version = "1.6.1", features = ["rt", "macros"] }
ui = { path = "../ui" }
serde_json = "1.0.64"
