[package]
name = "tocks"
version = "0.1.0"
authors = ["Mick Sayson <mick@sayson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
log = "0.4.14"
platform-dirs = "0.3.0"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["sync"] }
toxcore = { path = "../toxcore" }
