[package]
name = "tocks"
version = "0.1.0"
authors = ["Mick Sayson <mick@sayson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
chrono = "0.4.19"
futures = "0.3.13"
lazy_static = "1.4.0"
log = "0.4.14"
mockall = "0.9.1"
platform-dirs = "0.3.0"
rusqlite = { version = "0.24.2", features = ["chrono"] }
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["sync"] }
toxcore = { path = "../toxcore" }
