[package]
name = "tocks"
version = "0.1.0"
authors = ["Mick Sayson <mick@sayson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
chrono = { version= "0.4.19", features = ["serde"] }
fslock = "0.1.6"
futures = "0.3.15"
lazy_static = "1.4.0"
log = "0.4.14"
mockall = "0.9.1"
platform-dirs = "0.3.0"
rusqlite = { version = "0.25.3", features = ["chrono"] }
tempfile = "3.2.0"
thiserror = "1.0.25"
tokio = { version = "1.6.1", features = ["sync", "io-util", "net"] }
toxcore = { path = "../toxcore", features = ["serde"]}
openal-sys = { path = "../openal-sys" }
minimp3 = "0.5.1"
mockall_double = "0.2.0"
rusty-fork = "0.3.0"
serde = { version= "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
